feat: add ngrx settings🥚

--- a/apps/ng-shinobi-app/src/app/pages/character-list/character-list.component.html
+++ b/apps/ng-shinobi-app/src/app/pages/character-list/character-list.component.html
@@ -1,3 +1,7 @@
 <div>
   list page.
+  <div>
+    {{ characterDetail$ | async | json }}
+  </div>
+  <button (click)='fetch()'>fetch</button>
 </div>
