--- a/apps/ng-shinobi-app/src/app/pages/character-list/character-list.component.html
+++ b/apps/ng-shinobi-app/src/app/pages/character-list/character-list.component.html
@@ -1,6 +1,6 @@
 <article>
   <h1>Character List Page</h1>
-  <dl class='character-list__item' *ngFor='let character of characterDetail$ | async'>
+  <dl class='character-list__item' *ngFor='let character of (characterDetail$ | async).list'>
     <div class='character-list__detail'>
       <dt class='character-list__title'>キャラクター名</dt>
       <dd class='character-list__value'>{{character.name}}</dd>
