refactor: character-list

--- a/apps/ng-shinobi-app/src/app/pages/character-list/character-list.component.html
+++ b/apps/ng-shinobi-app/src/app/pages/character-list/character-list.component.html
@@ -34,5 +34,5 @@
       <dd class='character-list__title'>{{character.tonkohu}}</dd>
     </div>
   </dl>
-  <button (click)='fetch()'>fetch</button>
+  <button (click)='fetchCharacterList()'>fetch</button>
 </article>
