--- a/apps/ng-shinobi-app/src/app/pages/character-list/character-list.component.scss
+++ b/apps/ng-shinobi-app/src/app/pages/character-list/character-list.component.scss
@@ -1,17 +1,3 @@
-.character-list__item {
+.character-list {
   margin-top: 8px;
-}
-
-.character-list__detail {
-  display: flex;
-  flex-wrap: wrap;
-  width: 500px;
-}
-
-.character-list__title {
-  width: 40%;
-}
-
-.character-list__value {
-  width: 60%;
 }
