--- a/apps/ng-shinobi-app/src/app/pages/character-list/components/character-list-item/character-list-item.component.html
+++ b/apps/ng-shinobi-app/src/app/pages/character-list/components/character-list-item/character-list-item.component.html
@@ -1,32 +1,14 @@
-<div class="character-list-item__detail">
-  <dt class="character-list-item__title">キャラクター名</dt>
-  <dd class="character-list-item__value">{{character.name}}</dd>
-</div>
-<div class="character-list-item__detail">
-  <dt class="character-list-item__title">流派</dt>
-  <dd class="character-list-item__value">{{character.ryuha}}</dd>
-</div>
-<div class="character-list-item__detail">
-  <dt class="character-list-item__title">階級</dt>
-  <dd class="character-list-item__value">{{character.rank}}</dd>
-</div>
-<div class="character-list-item__detail">
-  <dt class="character-list-item__title">表の顔</dt>
-  <dd class="character-list-item__value">{{character.face}}</dd>
-</div>
-<div class="character-list-item__detail">
-  <dt class="character-list-item__title">信念</dt>
-  <dd class="character-list-item__value">{{character.belief}}</dd>
-</div>
-<div class="character-list-item__detail">
-  <dt class="character-list-item__title">兵糧丸</dt>
-  <dd class="character-list-item__value">{{character.hyorogan}}</dd>
-</div>
-<div class="character-list-item__detail">
-  <dt class="character-list-item__title">神通丸</dt>
-  <dd class="character-list-item__value">{{character.jintugan}}</dd>
-</div>
-<div class="character-list-item__detail">
-  <dt class="character-list-item__title">遁甲符</dt>
-  <dd class="character-list-item__title">{{character.tonkohu}}</dd>
-</div>
+<li>
+  <section  class="character-list-item">
+    <div class="character-list-item__detail">
+      <h1 class="character-list-item__name">{{character.name}}</h1>
+      <p class="character-list-item__value">{{character.regulation}}</p>
+      <p class="character-list-item__value">{{character.ryuha}}</p>
+      <p class="character-list-item__value">{{character.rank}}</p>
+      <p class="character-list-item__value">{{character.playerName}}</p>
+    </div>
+    <div class="character-list-item__icon">
+      <img class="character-list-item__icon__image" src="/assets/darts_pictogram.png" alt="image" />
+    </div>
+  </section>
+</li>
