--- a/apps/ng-shinobi-app/src/app/pages/character-list/components/character-list-item/character-list-item.component.scss
+++ b/apps/ng-shinobi-app/src/app/pages/character-list/components/character-list-item/character-list-item.component.scss
@@ -1,13 +1,34 @@
+@import "apps/ng-shinobi-app/src/app/styles/font-size";
+@import "apps/ng-shinobi-app/src/app/styles/color";
+
+.character-list-item {
+  display: flex;
+  width: 500px;
+  padding: 8px 16px;
+}
+
 .character-list-item__detail {
   display: flex;
-  flex-wrap: wrap;
-  width: 500px;
+  flex-direction: column;
+  order: 2;
+  margin-left: 28px;
+}
+.character-list-item__icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  order: 1;
+  width: 120px;
+  overflow: hidden;
+  border-radius: 50%;
+  background-color: $bg-gray;
+}
+.character-list-item__icon__image {
+  max-width: 100%;
+  max-height: 100%;
 }
 
-.character-list-item__title {
-  width: 40%;
-}
-
-.character-list-item__value {
-  width: 60%;
+.character-list-item__name {
+  @include fontSize(20);
+  font-weight: bold;
 }
