--- a/apps/ng-shinobi-app/src/styles.scss
+++ b/apps/ng-shinobi-app/src/styles.scss
@@ -1,1 +1,18 @@
 @import "modern-normalize/modern-normalize.css";
+
+/**
+ * normalizeされた上で打ち消したいstyleを記載する
+ */
+h1, h2, h3, p {
+  margin: 0;
+  padding: 0;
+}
+ul, ol {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+button {
+  border: none;
+  cursor: pointer;
+}
