style: set contents width

--- a/apps/ng-shinobi-app/src/app/app.component.html
+++ b/apps/ng-shinobi-app/src/app/app.component.html
@@ -1,2 +1,4 @@
 <ng-shinobi-app-header></ng-shinobi-app-header>
-<router-outlet></router-outlet>
+<main class="contents">
+  <router-outlet></router-outlet>
+</main>
