--- a/apps/ng-shinobi-app/src/app/pages/character-list/character-list.component.scss
+++ b/apps/ng-shinobi-app/src/app/pages/character-list/character-list.component.scss
@@ -1,4 +1,20 @@
+@import "apps/ng-shinobi-app/src/app/styles/font-size";
+@import "apps/ng-shinobi-app/src/app/styles/color";
+
+.character-list__title {
+  @include fontSize(28);
+  line-height: 1.5;
+  color: $text-black;
+}
+
 .character-list__contents {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.character-list__wrapper {
+  &:nth-child(n + 3) {
+    margin-top: 20px;
+  }
 }
