--- a/apps/ng-shinobi-app/src/app/pages/character-list/components/character-list-item/character-list-item.component.html
+++ b/apps/ng-shinobi-app/src/app/pages/character-list/components/character-list-item/character-list-item.component.html
@@ -1,14 +1,14 @@
-<li>
-  <section  class="character-list-item">
-    <div class="character-list-item__detail">
-      <h1 class="character-list-item__name">{{character.name}}</h1>
+<li class="character-list-item">
+  <section class="character-list-item__section">
+    <div class="character-list-item__section__detail">
+      <h1 class="character-list-item__section__detail__name">{{character.name}}</h1>
       <p class="character-list-item__value">{{character.regulation}}</p>
       <p class="character-list-item__value">{{character.ryuha}}</p>
       <p class="character-list-item__value">{{character.rank}}</p>
       <p class="character-list-item__value">{{character.playerName}}</p>
     </div>
-    <div class="character-list-item__icon">
-      <img class="character-list-item__icon__image" src="/assets/darts_pictogram.png" alt="image" />
+    <div class="character-list-item__section__icon">
+      <img class="character-list-item__section__icon__image" src="/assets/darts_pictogram.png" alt="image" />
     </div>
   </section>
 </li>
