--- a/apps/ng-shinobi-app/src/app/pages/character-list/components/character-list-item/character-list-item.component.scss
+++ b/apps/ng-shinobi-app/src/app/pages/character-list/components/character-list-item/character-list-item.component.scss
@@ -1,20 +1,21 @@
 @import "apps/ng-shinobi-app/src/app/styles/font-size";
 @import "apps/ng-shinobi-app/src/app/styles/color";
 
-.character-list-item {
+.character-list-item__section {
   display: flex;
   width: 500px;
   padding: 8px 16px;
   border: 1px solid $border-black;
 }
 
-.character-list-item__detail {
+.character-list-item__section__detail {
   display: flex;
   flex-direction: column;
   order: 2;
   margin-left: 28px;
+  color: $text-black;
 }
-.character-list-item__icon {
+.character-list-item__section__icon {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -24,12 +25,12 @@
   border-radius: 50%;
   background-color: $bg-gray;
 }
-.character-list-item__icon__image {
+.character-list-item__section__icon__image {
   max-width: 100%;
   max-height: 100%;
 }
 
-.character-list-item__name {
+.character-list-item__section__detail__name {
   @include fontSize(20);
   font-weight: bold;
 }
