style: add button color

--- a/apps/ng-shinobi-app/src/app/styles/color.scss
+++ b/apps/ng-shinobi-app/src/app/styles/color.scss
@@ -1,4 +1,9 @@
 $text-black: #333333;
+$text-white: #FFFFFF;
 $border-black: #333333;
 $bg-black: #333333;
+$bg-white: #FFFFFF;
 $bg-gray: #EBECF0;
+$bg-blue: #448AFF;
+$bg-red: #EB5757;
+$bg-yellow: #F2C94C;
