style: fix button style

--- a/apps/ng-shinobi-app/src/app/components/button/button.component.html
+++ b/apps/ng-shinobi-app/src/app/components/button/button.component.html
@@ -1,1 +1,1 @@
-<button [classList]="classList" (click)="onClick()">{{text}}</button>
+<button [ngClass]="classList" (click)="onClick()">{{text}}</button>
