--- a/apps/ng-shinobi-app/src/app/pages/character-list/character-list.component.scss
+++ b/apps/ng-shinobi-app/src/app/pages/character-list/character-list.component.scss
@@ -18,3 +18,9 @@
     margin-top: 20px;
   }
 }
+
+.character-list__load-button {
+  display: flex;
+  justify-content: center;
+  margin-top: 24px;
+}
