--- a/apps/ng-shinobi-app/src/app/pages/character-list/character-list.component.html
+++ b/apps/ng-shinobi-app/src/app/pages/character-list/character-list.component.html
@@ -1,9 +1,11 @@
 <article class="character-list">
   <h1 class="character-list__title">キャラクター一覧</h1>
   <ul class="character-list__contents">
-    <ng-container *ngFor="let character of (characterDetail$ | async).list">
+    <ng-container *ngFor="let character of (characterDetailList$ | async)">
       <ng-shinobi-app-character-list-item class="character-list__wrapper"  [character]="character"></ng-shinobi-app-character-list-item>
     </ng-container>
   </ul>
-  <button (click)="fetchCharacterList()">fetch</button>
+  <div class="character-list__load-button">
+    <ng-shinobi-app-button size="large" type="default" text="もっと見る" [hasBorder]="true" (clicked)="fetchCharacterList()"></ng-shinobi-app-button>
+  </div>
 </article>
