feat: card to link

--- a/apps/ng-shinobi-app/src/app/pages/character-list/components/character-list-item/character-list-item.component.html
+++ b/apps/ng-shinobi-app/src/app/pages/character-list/components/character-list-item/character-list-item.component.html
@@ -1,14 +1,16 @@
 <li class="character-list-item">
-  <section class="character-list-item__section">
-    <div class="character-list-item__section__detail">
-      <h1 class="character-list-item__section__detail__name">{{character.name}}</h1>
-      <p class="character-list-item__value">{{character.regulation}}</p>
-      <p class="character-list-item__value">{{character.ryuha}}</p>
-      <p class="character-list-item__value">{{character.rank}}</p>
-      <p class="character-list-item__value">{{character.playerName}}</p>
-    </div>
-    <div class="character-list-item__section__icon">
-      <img class="character-list-item__section__icon__image" src="/assets/darts_pictogram.png" alt="image" />
-    </div>
-  </section>
+  <a href="#" class="character-list-item__link">
+    <section class="character-list-item__link__section">
+      <div class="character-list-item__link__section__detail">
+        <h1 class="character-list-item__link__section__detail__name">{{character.name}}</h1>
+        <p class="character-list-item__link__section__detail__value">{{character.regulation}}</p>
+        <p class="character-list-item__link__section__detail__value">{{character.ryuha}}</p>
+        <p class="character-list-item__link__section__detail__value">{{character.rank}}</p>
+        <p class="character-list-item__link__section__detail__value">{{character.playerName}}</p>
+      </div>
+      <div class="character-list-item__link__section__icon">
+        <img class="character-list-item__link__section__icon__image" src="/assets/darts_pictogram.png" alt="image"/>
+      </div>
+    </section>
+  </a>
 </li>
