add character list page (#5)
* style: fix styles

* feat: create param types

* style: common styles

* feat: lang en to ja

* feat: add header component

* feat: add character-list-item component

* feat: add header and fix server url

* style: add character-list-item style

* style: import normalize.css

* style: fix global style and set border

* style: set contents width

* style: add list style.

* build: update tsconfig

* feat: add button component

* style: add button color

* feat: add Required decorator.

* style: fix button style

* feat: card to link

--- a/apps/ng-shinobi-app/src/app/app.component.html
+++ b/apps/ng-shinobi-app/src/app/app.component.html
@@ -1,1 +1,4 @@
-<router-outlet></router-outlet>
+<ng-shinobi-app-header></ng-shinobi-app-header>
+<main class="contents">
+  <router-outlet></router-outlet>
+</main>
