--- a/apps/ng-shinobi-app/src/styles.scss
+++ b/apps/ng-shinobi-app/src/styles.scss
@@ -1,46 +1,18 @@
-*, *::before, *::after {
-  box-sizing: border-box
-}
+@import "modern-normalize/modern-normalize.css";
 
-body, h1, h2, h3, h4, p, figure, blockquote, dl, dd {
-  margin: 0
+/**
+ * normalizeされた上で打ち消したいstyleを記載する
+ */
+h1, h2, h3, p {
+  margin: 0;
+  padding: 0;
 }
-
-ul[role="list"], ol[role="list"] {
-  list-style: none
+ul, ol {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
-
-html:focus-within {
-  scroll-behavior: smooth
-}
-
-body {
-  min-height: 100vh;
-  text-rendering: optimizeSpeed;
-  line-height: 1.5
-}
-
-a:not([class]) {
-  text-decoration-skip-ink: auto
-}
-
-img, picture {
-  max-width: 100%;
-  display: block
-}
-
-input, button, textarea, select {
-  font: inherit
-}
-
-@media(prefers-reduced-motion: reduce) {
-  html:focus-within {
-    scroll-behavior: auto
-  }
-  *, *::before, *::after {
-    animation-duration: .01ms !important;
-    animation-iteration-count: 1 !important;
-    transition-duration: .01ms !important;
-    scroll-behavior: auto !important
-  }
+button {
+  border: none;
+  cursor: pointer;
 }
